Update styles and spacing and fix gradient

--- a/src/assets/scss/_custom.scss
+++ b/src/assets/scss/_custom.scss
@@ -28,6 +28,8 @@ $font-size-base: 1.125rem;
 $font-size-sm: $font-size-base - .125;
 $font-size-lg: $font-size-base * 1.25;
 
+$headings-font-weight: 400;
+
 $line-height-base: 1.75;
 
 $link-color: white;
